Changes: iphone event gallery fixes and 2bootstrap.sh fixes
